kubernetes-b19/pod.yaml
-----

apiVersion: v1
kind: Pod
metadata:
  name: cbz-pod
  labels:
    app: cbz-app
spec:
  containers:
    - name: cbz-container
      image: httpd
      ports:
        - containerPort: 80
    - name: tomcat-container
      image: tomcat
      ports:
        - containerPort: 8080
...
