kubernetes-b19/laptop-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laptop-deployment
  labels: 
    app: laptop
spec: 
  template: 
    metadata: 
      labels:
        app: laptop
    spec: 
      containers:
       - name: laptop-c
         image: nginx
         ports:
           - containerPort: 80
  replicas: 3
  selector: 
    matchlabels:
      app: laptop
  strategy: 
    type: RollingUpdate
...
---
apiVersion: v1
kind: Service
metadata: 
  name: laptop-svc
spec: 
  ports:
    - ports: 80
      tatrgetPort: 80
      protocol: TCP
  selector: 
    app: laptop
...
