kubernetes-b19/mobile-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mobile-deployment
  labels: 
    app: mobile
spec:
  template:
    metadata:
      labels:
        app: mobile
    spec: 
      containers:
        - name: mobile-c
          image: httpd
          poorts:
            - containerPort: 80
  replicas: 3
  selector:
    matchlabels:
      app: mobile
  strategy:
    type: RollingUpdate
...
---
apiVersion: v1
kind: Service
metadata: 
  name: mobile-svc
spec: 
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector: 
    app: mobile
