kubernetes-b19/ingress-namebased.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
spec:
  ingressClassNmae: nginx
  rules:
    - host: "mobile.cbz.com"
      http:
        paths: 
        - paths: /
          pathtype: Prefix
          backend: 
            service:  
              name: mobile-svc
              port: 
                number: 80
    - host: "laptop.cbz.com"
      http:
        path:
        - path: /
          pathType: Prefix
          backend: 
            service:
              name: laptop-svc
              port: 
                number: 80
